<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/main_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/check_default" />


    <TextView
        android:id="@+id/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="初期状態です"
        android:textSize="30dp" />

    <RadioGroup
        android:id="@+id/radio_btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn1" />

        <RadioButton
            android:id="@+id/radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_btn2" />

        <RadioButton
            android:id="@+id/radio_btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn3" />
    </RadioGroup>

    <Button
        android:id="@+id/test_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="TEST BUTTON 01" />

    <Button
        android:id="@+id/test_btn2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/test_btn2" />

</LinearLayout>
